[gd_scene load_steps=4 format=2]

[ext_resource path="res://Shared/Theme/builder_theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/Inventory/InventoryWindow.gd" type="Script" id=2]
[ext_resource path="res://GUI/Inventory/InventoryBar.tscn" type="PackedScene" id=4]

[node name="InventoryWindow" type="MarginContainer"]
margin_right = 90.0
margin_bottom = 110.0
mouse_filter = 2
theme = ExtResource( 1 )
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowBack" type="PanelContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 65.0
margin_bottom = 85.0
mouse_filter = 1

[node name="Window" type="MarginContainer" parent="WindowBack"]
margin_right = 40.0
margin_bottom = 60.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Inventories" type="VBoxContainer" parent="WindowBack/Window"]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="Inventory1" parent="WindowBack/Window/Inventories" instance=ExtResource( 4 )]

[node name="Inventory2" parent="WindowBack/Window/Inventories" instance=ExtResource( 4 )]
margin_top = 10.0
margin_bottom = 10.0

[node name="Inventory3" parent="WindowBack/Window/Inventories" instance=ExtResource( 4 )]
margin_top = 20.0
margin_bottom = 20.0
[connection signal="inventory_changed" from="WindowBack/Window/Inventories/Inventory1" to="." method="_on_Inventory_inventory_changed"]
[connection signal="inventory_changed" from="WindowBack/Window/Inventories/Inventory2" to="." method="_on_Inventory_inventory_changed"]
[connection signal="inventory_changed" from="WindowBack/Window/Inventories/Inventory3" to="." method="_on_Inventory_inventory_changed"]
